<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        >


        <TextView
            android:text="@string/r_str_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTaskName"
            android:textStyle="normal|bold"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="#000000" />

        <TextView
            android:text="@string/r_str_task_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDeadline"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:textColor="#000000" />

        <TextView
            android:text="@string/r_str_task_term_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTaskTermName"
            android:textSize="12sp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <TextView
            android:text="@string/r_str_task_point_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTaskPoint"
            android:textSize="12sp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <TextView
            android:text="@string/r_str_points_collected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTaskCollectedPoints"
            android:textSize="12sp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />
    </LinearLayout>

</LinearLayout>