<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ican.ilkercan.bumba.NewTaskActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <EditText
        android:id="@+id/txtPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedcorners"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/r_str_task_point"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/txtDeadline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtTaskName"
        app:layout_constraintRight_toRightOf="@+id/txtTaskName"
        app:layout_constraintStart_toStartOf="@+id/txtDeadline"
        app:layout_constraintTop_toBottomOf="@+id/txtDeadline"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Spinner
        android:id="@+id/spTermsSpinner"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginRight="132dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedcorners"
        android:enabled="true"
        app:layout_constraintEnd_toEndOf="@+id/txtTaskName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtTaskName"
        app:layout_constraintTop_toBottomOf="@+id/txtTaskName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageButton
        android:id="@+id/btnSelectDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toEndOf="@+id/txtDeadline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_date_range_black_24dp" />

    <EditText
        android:id="@+id/txtTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedcorners"
        android:ems="10"
        android:hint="@string/r_str_task_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/txtDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedcorners"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/r_str_deadline"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintLeft_toLeftOf="@+id/txtTaskName"
        app:layout_constraintRight_toRightOf="@+id/txtTaskName"
        app:layout_constraintStart_toStartOf="@+id/spTermsSpinner"
        app:layout_constraintTop_toBottomOf="@+id/spTermsSpinner"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btnSaveNewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/r_str_generic_SaveButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPoint"
        app:layout_constraintVertical_bias="0.107" />


</android.support.constraint.ConstraintLayout>
